tests/negative/gold/lambda5-test.gold
tests/negative/lambda5-test.toit:8:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/lambda5-test.toit:7:7: error: Class 'Lambda' does not have any method 'foo'
  fun.foo
      ^~~
Compilation failed
